--- a/ejercicio/solucion.html
+++ b/ejercicio/solucion.html
@@ -17,7 +17,7 @@
 
     class Person
     Person : +String name
-    Person : +int edad
+    Person : +int miEdad
     Person "1" --> "*" BankAccount
 
         </div>
